@@ -7,17 +7,24 @@ dnl
 AC_DEFUN([GNOME_ORBIT_HOOK],[
 	AC_PATH_PROG(ORBIT_CONFIG,orbit-config,no)
 	AC_PATH_PROG(ORBIT_IDL,orbit-idl,no)
-	if test x$ORBIT_CONFIG = xno -o x$ORBIT_IDL = xno; then
-	    	if test x$2 = xfailure; then
-			AC_MSG_ERROR(Could not find orbit-config or orbit-idl)
-	    	fi
-	else
+	AC_CACHE_CHECK([for working ORBit environment],gnome_cv_orbit_found,[
+		if test x$ORBIT_CONFIG = xno -o x$ORBIT_IDL = xno; then
+			gnome_cv_orbit_found=no
+		else
+			gnome_cv_orbit_found=yes
+		fi
+	])
+	AM_CONDITIONAL(HAVE_ORBIT, test x$gnome_cv_orbit_found = xyes)
+	if test x$gnome_cv_orbit_found = xyes; then
 		$1
 		ORBIT_CFLAGS=`orbit-config --cflags client server`
 		ORBIT_LIBS=`orbit-config --use-service=name --libs client server`
 		AC_SUBST(ORBIT_CFLAGS)
 		AC_SUBST(ORBIT_LIBS)
-		AC_DEFINE(HAVE_ORBIT)
+	else
+    		if test x$2 = xfailure; then
+			AC_MSG_ERROR(ORBit not installed or installation problem)
+    		fi
 	fi
 ])
 
